<resources>
    <string name="app_name">maksukalkulaator</string>
    <string name="yhikuhind">Ühikuhind</string>
    <string name="yhikutearv">Ühikute arv</string>
    <string name="yhikuhindilmakm">Ühiku hind ilma käibemaksuta</string>
    <string name="yhikuhindkooskm">Ühiku hind koos käibemaksuga</string>
    <string name="clear">puhasta</string>
    <string name="ok">ok</string>
    <string name="sumilmakm">Summa ilma käibemaksuta</string>
    <string name="km">Käibemaks</string>
    <string name="sumkooskm">Summa koos käibemaksuga</string>
</resources>
